feat(로또): 리팩토링